--- a/React-Native/ProjetoMobile/ios/Podfile
+++ b/React-Native/ProjetoMobile/ios/Podfile
@@ -27,6 +27,14 @@ target 'ProjetoMobile' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
+  pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
+
+  pod 'react-native-safe-area-context', :path => '../node_modules/react-native-safe-area-context'
+
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'ProjetoMobileTests' do
     inherit! :search_paths
     # Pods for testing
