--- a/React-Native/ProjetoMobile/package.json
+++ b/React-Native/ProjetoMobile/package.json
@@ -8,11 +8,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/drawer": "^5.0.0-alpha.0",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-paper": "^2.16.0",
     "react-native-reanimated": "^1.3.0",
+    "react-native-safe-area-context": "^0.5.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
+    "react-navigation-drawer": "^2.2.2",
+    "react-navigation-material-bottom-tabs": "^2.1.2",
     "react-navigation-stack": "^1.9.4",
     "react-navigation-tabs": "^2.5.6"
   },
