--- a/React-Native/SegundoProjetoMobile/package.json
+++ b/React-Native/SegundoProjetoMobile/package.json
@@ -14,6 +14,7 @@
     "firebase": "^7.2.3",
     "react": "16.9.0",
     "react-native": "0.61.3",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-image-picker": "^1.1.0",
     "react-native-netinfo": "^1.1.0",
