--- a/React-Native/CadastroFireBase/package.json
+++ b/React-Native/CadastroFireBase/package.json
@@ -13,6 +13,7 @@
     "firebase": "^7.5.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-image-picker": "^1.1.0"
   },
   "devDependencies": {
