--- a/React-Native/CadastroFireBase/package.json
+++ b/React-Native/CadastroFireBase/package.json
@@ -14,7 +14,13 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-fetch-blob": "^0.10.8",
-    "react-native-image-picker": "^1.1.0"
+    "react-native-gesture-handler": "^1.5.3",
+    "react-native-image-picker": "^1.1.0",
+    "react-native-reanimated": "^1.4.0",
+    "react-native-safe-area-context": "^0.6.2",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^2.0.2",
+    "react-navigation-tabs": "^2.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
